Fix spacing of featured titles so they don't overlap with their header

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -253,6 +253,7 @@ span.institution_name {
 
   div {
     margin-bottom: 25px;
+    margin-top: 25px;
   }
 
   .featured-item-title {
